--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 # Server properties (optional)
 server.port=8081
 logging.file.name=app.log
+spring.docker.compose.enabled=false
