--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # src/main/resources/application.properties
 
 # Database connection properties
-spring.datasource.url=jdbc:mysql://localhost:3306/Local instance MYSQL80
+spring.datasource.url=jdbc:mysql://localhost:3306/musicdb
 spring.datasource.username=root
 spring.datasource.password=Snick123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -12,6 +12,7 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # Server properties (optional)
-server.port=8081
+server.port=8080
 logging.file.name=app.log
-spring.docker.compose.enabled=false
+spring.batch.job.enabled=false
+logging.level.org.springframework.web=DEBUG
