--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,9 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # Server properties (optional)
-server.port=8080
+server.port=8081
+server.servlet.context-path=/api
 logging.file.name=app.log
 spring.batch.job.enabled=false
 logging.level.org.springframework.web=DEBUG
+
